--- a/SIRL/SIRL.ipynb
+++ b/SIRL/SIRL.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03d40de9",
+   "id": "2155bd4d",
    "metadata": {},
    "source": [
     "### Random Agent"
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8765cbd0",
+   "execution_count": 39,
+   "id": "2cc834ec",
    "metadata": {
     "scrolled": false
    },
@@ -41,31 +41,31 @@
      "output_type": "stream",
      "text": [
       "Episode : 1\n",
-      "Score: 135.0\n",
+      "Score: 180.0\n",
       "Info: {'ale.lives': 0}\n",
       "Episode : 2\n",
-      "Score: 105.0\n",
+      "Score: 270.0\n",
       "Info: {'ale.lives': 0}\n",
       "Episode : 3\n",
-      "Score: 130.0\n",
+      "Score: 60.0\n",
       "Info: {'ale.lives': 0}\n",
       "Episode : 4\n",
-      "Score: 135.0\n",
-      "Info: {'ale.lives': 0}\n",
-      "Episode : 5\n",
-      "Score: 45.0\n",
-      "Info: {'ale.lives': 0}\n",
-      "Episode : 6\n",
-      "Score: 20.0\n",
-      "Info: {'ale.lives': 0}\n",
-      "Episode : 7\n",
-      "Score: 45.0\n",
-      "Info: {'ale.lives': 0}\n",
-      "Episode : 8\n",
       "Score: 65.0\n",
       "Info: {'ale.lives': 0}\n",
+      "Episode : 5\n",
+      "Score: 35.0\n",
+      "Info: {'ale.lives': 0}\n",
+      "Episode : 6\n",
+      "Score: 80.0\n",
+      "Info: {'ale.lives': 0}\n",
+      "Episode : 7\n",
+      "Score: 110.0\n",
+      "Info: {'ale.lives': 0}\n",
+      "Episode : 8\n",
+      "Score: 35.0\n",
+      "Info: {'ale.lives': 0}\n",
       "Episode : 9\n",
-      "Score: 185.0\n",
+      "Score: 105.0\n",
       "Info: {'ale.lives': 0}\n"
      ]
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434a78fe",
+   "id": "b900e67b",
    "metadata": {},
    "source": [
     "### DQNA"
@@ -97,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4ebd5dc8",
+   "execution_count": 40,
+   "id": "799bb4f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "ef3b72c2",
+   "execution_count": 41,
+   "id": "54cfa077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "1291af74",
+   "execution_count": 42,
+   "id": "cf925b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,18 +146,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "8c8c98a6",
+   "execution_count": 49,
+   "id": "a5023b95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_10\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_45 (Conv2D)           (None, 3, 51, 39, 32)     6176      \n",
+      "_________________________________________________________________\n",
+      "conv2d_46 (Conv2D)           (None, 3, 24, 18, 64)     32832     \n",
+      "_________________________________________________________________\n",
+      "conv2d_47 (Conv2D)           (None, 3, 11, 8, 64)      65600     \n",
+      "_________________________________________________________________\n",
+      "conv2d_48 (Conv2D)           (None, 3, 4, 3, 64)       65600     \n",
+      "_________________________________________________________________\n",
+      "flatten_4 (Flatten)          (None, 2304)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_18 (Dense)             (None, 512)               1180160   \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 256)               131328    \n",
+      "_________________________________________________________________\n",
+      "dense_20 (Dense)             (None, 64)                16448     \n",
+      "_________________________________________________________________\n",
+      "dense_21 (Dense)             (None, 6)                 390       \n",
+      "=================================================================\n",
+      "Total params: 1,498,534\n",
+      "Trainable params: 1,498,534\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "model = Bmodel(height, width, channels, actions)"
+    "model = Bmodel(height, width, channels, actions)\n",
+    "print(model.summary())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "7c1899de",
+   "execution_count": 44,
+   "id": "d11de345",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,8 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "63b0afcd",
+   "execution_count": 45,
+   "id": "6823841d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "53837bfb",
+   "execution_count": 46,
+   "id": "a41ccf10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,18 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "1d93ff79",
+   "execution_count": 47,
+   "id": "b4bfa380",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dqn.compile(Adam(learning_rate=0.00001))"
+    "dqn.compile(Adam(learning_rate=0.001))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "9cb9a345",
+   "execution_count": 48,
+   "id": "118b0a87",
    "metadata": {},
    "outputs": [
     {
@@ -216,52 +251,32 @@
      "text": [
       "Training for 99999 steps ...\n",
       "Interval 1 (0 steps performed)\n",
-      "\r",
-      "    1/10000 [..............................] - ETA: 22:26 - reward: 0.0000e+00"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\ghaiyur\\documents\\rl-agents\\sirl\\env\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py:2426: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-      "  warnings.warn('`Model.state_updates` will be removed in a future version. '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000/10000 [==============================] - 125s 12ms/step - reward: 0.1910\n",
-      "15 episodes - episode_reward: 124.000 [55.000, 210.000] - ale.lives: 2.150\n",
+      "10000/10000 [==============================] - 165s 16ms/step - reward: 0.2125\n",
+      "12 episodes - episode_reward: 177.083 [5.000, 365.000] - ale.lives: 2.091\n",
       "\n",
       "Interval 2 (10000 steps performed)\n",
-      "10000/10000 [==============================] - 6473s 647ms/step - reward: 0.1840\n",
-      "15 episodes - episode_reward: 119.333 [10.000, 230.000] - loss: 0.989 - mean_q: 3.072 - mean_eps: 0.100 - ale.lives: 1.930\n",
-      "\n",
-      "Interval 3 (20000 steps performed)\n",
-      "   44/10000 [..............................] - ETA: 1:45:55 - reward: 0.3409done, took 6626.367 seconds\n"
+      "  336/10000 [>.............................] - ETA: 1:55:16 - reward: 0.1339done, took 407.058 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1d515c7b850>"
+       "<tensorflow.python.keras.callbacks.History at 0x1d51b167880>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dqn.fit(env, nb_steps=99999, visualize=False ,verbose=1)"
+    "dqn.fit(env, nb_steps=99999, visualize=True ,verbose=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e8594a56",
+   "id": "f0233d9a",
    "metadata": {},
    "outputs": [
     {
@@ -324,24 +339,24 @@
     }
    ],
    "source": [
-    "scores = dqn.test(env, nb_episodes=50, visualize=False)\n",
+    "scores = dqn.test(env, nb_episodes=50, visualize=True)\n",
     "print(np.mean(scores.history['episode_reward']))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6c3ce8fb",
+   "id": "8c691e84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dqn.save_weights('models/dqn.h5f')"
+    "dqn.save_weights('models/dqn2.h5f')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbf21df4",
+   "id": "a2fe3943",
    "metadata": {},
    "outputs": [],
    "source": [
