--- a/SIRL/SIRL.ipynb
+++ b/SIRL/SIRL.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2155bd4d",
+   "id": "814a23f5",
    "metadata": {},
    "source": [
     "### Random Agent"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2cc834ec",
+   "id": "208eadce",
    "metadata": {
     "scrolled": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b900e67b",
+   "id": "759d6529",
    "metadata": {},
    "source": [
     "### DQNA"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "799bb4f0",
+   "id": "5378150f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "54cfa077",
+   "id": "fea0697b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cf925b1e",
+   "id": "c4ecdc34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,41 +146,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "a5023b95",
+   "execution_count": 52,
+   "id": "7fcabf60",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_10\"\n",
+      "Model: \"sequential_13\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_45 (Conv2D)           (None, 3, 51, 39, 32)     6176      \n",
+      "conv2d_57 (Conv2D)           (None, 3, 51, 39, 32)     6176      \n",
       "_________________________________________________________________\n",
-      "conv2d_46 (Conv2D)           (None, 3, 24, 18, 64)     32832     \n",
+      "conv2d_58 (Conv2D)           (None, 3, 24, 18, 64)     32832     \n",
       "_________________________________________________________________\n",
-      "conv2d_47 (Conv2D)           (None, 3, 11, 8, 64)      65600     \n",
+      "conv2d_59 (Conv2D)           (None, 3, 11, 8, 64)      65600     \n",
       "_________________________________________________________________\n",
-      "conv2d_48 (Conv2D)           (None, 3, 4, 3, 64)       65600     \n",
+      "conv2d_60 (Conv2D)           (None, 3, 4, 3, 64)       65600     \n",
       "_________________________________________________________________\n",
-      "flatten_4 (Flatten)          (None, 2304)              0         \n",
+      "flatten_7 (Flatten)          (None, 2304)              0         \n",
       "_________________________________________________________________\n",
-      "dense_18 (Dense)             (None, 512)               1180160   \n",
+      "dense_30 (Dense)             (None, 512)               1180160   \n",
       "_________________________________________________________________\n",
-      "dense_19 (Dense)             (None, 256)               131328    \n",
+      "dense_31 (Dense)             (None, 256)               131328    \n",
       "_________________________________________________________________\n",
-      "dense_20 (Dense)             (None, 64)                16448     \n",
+      "dense_32 (Dense)             (None, 64)                16448     \n",
       "_________________________________________________________________\n",
-      "dense_21 (Dense)             (None, 6)                 390       \n",
+      "dense_33 (Dense)             (None, 6)                 390       \n",
       "=================================================================\n",
       "Total params: 1,498,534\n",
       "Trainable params: 1,498,534\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "None\n"
+      "None\n",
+      "('You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) ', 'for plot_model/model_to_dot to work.')\n"
      ]
     }
    ],
@@ -192,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d11de345",
+   "id": "6a8ec0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6823841d",
+   "id": "2f813298",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a41ccf10",
+   "id": "3aaa2d8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b4bfa380",
+   "id": "35594508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "118b0a87",
+   "id": "fd98477a",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f0233d9a",
+   "id": "09bbd614",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8c691e84",
+   "id": "b8a12fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2fe3943",
+   "id": "a6071cb2",
    "metadata": {},
    "outputs": [],
    "source": [
