--- a/AutonomousTaxiRL/AutonomousTaxiRL.ipynb
+++ b/AutonomousTaxiRL/AutonomousTaxiRL.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 111,
    "metadata": {
     "tags": []
    },
@@ -159,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "array([[0.50160264, 0.49299999, 0.49270535, 0.49014222],\n       [0.38014087, 0.359192  , 0.37672186, 0.47033758],\n       [0.40299792, 0.39113008, 0.40359998, 0.44378756],\n       [0.3827346 , 0.31298947, 0.22344276, 0.43466582],\n       [0.52779986, 0.31066929, 0.31899786, 0.33493881],\n       [0.        , 0.        , 0.        , 0.        ],\n       [0.33385096, 0.08837472, 0.19850115, 0.14630365],\n       [0.        , 0.        , 0.        , 0.        ],\n       [0.2880314 , 0.51194434, 0.49598902, 0.5699752 ],\n       [0.43231944, 0.61663472, 0.50830982, 0.4678196 ],\n       [0.58865212, 0.35860015, 0.41580887, 0.35109429],\n       [0.        , 0.        , 0.        , 0.        ],\n       [0.        , 0.        , 0.        , 0.        ],\n       [0.44088582, 0.54985403, 0.69185728, 0.50217613],\n       [0.71626403, 0.79093869, 0.76701011, 0.73111078],\n       [0.        , 0.        , 0.        , 0.        ]])"
+      "text/plain": "array([[0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.],\n       [0., 0., 0., 0.]])"
      },
      "metadata": {}
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 113,
    "metadata": {
     "tags": []
    },
@@ -186,7 +186,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Average per thousand episodes\n1000  : -136.70100000000008\n2000  : -8.77399999999998\n3000  : 2.7829999999999897\n4000  : 5.737999999999967\n5000  : 6.576999999999964\n6000  : 7.456999999999966\n7000  : 7.482999999999965\n8000  : 7.412999999999957\n9000  : 7.466999999999963\n10000  : 7.303999999999961\n"
+      "Average per thousand episodes\n1000  : 0.0\n2000  : 0.0\n3000  : 0.0\n4000  : 0.0\n5000  : 0.0\n6000  : 0.0\n7000  : 0.0\n8000  : 0.0\n9000  : 0.0\n10000  : 0.0\n"
      ]
     }
    ],
@@ -204,19 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "  (Down)\n",
-      "SFFF\n",
-      "FHFH\n",
-      "FFFH\n",
-      "HFF\u001b[41mG\u001b[0m\n",
-      "*** Reached Goal ***\n"
+      "  (Left)\nSFFFFFFF\nFFFFFFFF\n\u001b[41mF\u001b[0mFFHFFFF\nFFFFFHFF\nFFFHFFFF\nFHHFFFHF\nFHFFHFHF\nFFFHFFFG\n"
      ]
     }
    ],
